Update .ignore and remove unnecessary CSS files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 build/
 node_modules/
 package-lock.json
+less/theme.less
+less/app-plain.less
+less/app-dark.less
+app.config.json
+Gruntfile.js
+.eslintrc
