--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-gis": "git+ssh://git@git.gorilla-technology.com:scrd01/react-gis.git#react-gis-upgrade",
     "react-json-tree": "^0.11.0",
     "react-la": "git+ssh://git@git.gorilla-technology.com:scrd01/react-la.git#upgrade-react-v16",
+    "react-multi-email": "^0.5.1",
     "react-redux": "^4.4.6",
     "react-router-dom": "^4.3.1",
     "react-sortable-hoc": "^0.8.4",
