Complete excel upload to support both CSV and XLSX format. Fix csv upload header support and fix Chinese language support.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-jest": "^23.6.0",
+    "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
