--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-color": "^2.17.3",
     "react-dom": "^16.3.1",
     "react-gis": "git+ssh://git@git.gorilla-technology.com:scrd01/react-gis.git#react-gis-upgrade",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-json-tree": "^0.11.0",
     "react-la": "git+ssh://git@git.gorilla-technology.com:scrd01/react-la.git#upgrade-react-v16",
     "react-multi-email": "^0.5.1",
