--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "loglevel-prefix-persist": "^1.0.3",
     "method-override": "^2.3.10",
     "moment": "^2.22.1",
+    "moment-timezone": "^0.5.27",
     "morgan": "^1.9.0",
     "object-path-immutable": "^1.0.1",
     "prop-types": "^15.6.1",
