--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
     "prop-types": "^15.6.1",
     "purecss": "^1.0.0",
     "query-string": "^5.1.1",
-    "react": "^16.3.1",
+    "react": "^16.13.0",
     "react-chart": "git+ssh://git@git.gorilla-technology.com:scrd01/react-chart.git#upgrade-react-v16",
     "react-color": "^2.17.3",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.13.0",
     "react-gis": "git+ssh://git@git.gorilla-technology.com:scrd01/react-gis.git#react-gis-upgrade",
     "react-infinite-scroll-component": "^5.0.4",
     "react-json-tree": "^0.11.0",
@@ -79,6 +79,7 @@
     "stompjs": "^2.3.3",
     "underscore.string": "^3.2.1",
     "vbda-ui": "git+ssh://git@git.gorilla-technology.com:scrd01/vbda-ui.git#upgrade-react-v16",
+    "widget-builder": "git+ssh://git@git.gorilla-technology.com:scrd01/widget-builder.git#upgrade-react-v16",
     "xlsx": "^0.15.4"
   },
   "devDependencies": {
