--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "stompjs": "^2.3.3",
     "underscore.string": "^3.2.1",
     "vbda-ui": "git+ssh://git@git.gorilla-technology.com:scrd01/vbda-ui.git#upgrade-react-v16",
-    "widget-builder": "git+ssh://git@git.gorilla-technology.com:scrd01/widget-builder.git#upgrade-react-v16",
+    "widget-builder": "git+ssh://git@git.gorilla-technology.com:scrd01/widget-builder.git#react-v16-merge",
     "xlsx": "^0.15.4"
   },
   "devDependencies": {
