--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-session": "^1.15.6",
     "font-gorilla": "git+ssh://git@git.gorilla-technology.com:scrd01/font-gorilla.git",
     "formidable": "^1.2.1",
+    "html-to-image": "^0.1.1",
     "jest": "^23.6.0",
     "jquery": "^3.3.1",
     "jschardet": "^2.1.1",
