--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.27",
     "morgan": "^1.9.0",
+    "mui-datatables": "^3.5.0",
     "object-path-immutable": "^1.0.1",
     "prop-types": "^15.6.1",
     "purecss": "^1.0.0",
