--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "underscore.string": "^3.2.1",
     "vbda-ui": "git+ssh://git@git.gorilla-technology.com:scrd01/vbda-ui.git#upgrade-react-v16",
     "widget-builder": "git+ssh://git@git.gorilla-technology.com:scrd01/widget-builder.git#react-v16-merge",
-    "xlsx": "^0.15.4"
+    "xlsx": "^0.15.4",
+    "graceful-fs": "4.2.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
