--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-chart": "git+ssh://git@git.gorilla-technology.com:scrd01/react-chart.git#upgrade-react-v16",
     "react-color": "^2.17.3",
     "react-dom": "^16.13.0",
+    "react-flow-renderer": "^9.6.1",
     "react-gis": "git+ssh://git@git.gorilla-technology.com:scrd01/react-gis.git#react-gis-upgrade",
     "react-infinite-scroll-component": "^5.0.4",
     "react-json-tree": "^0.11.0",
