--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jquery": "^3.3.1",
     "jschardet": "^2.1.1",
     "jsdoc": "^3.6.3",
+    "localforage": "^1.9.0",
     "lodash": "^4.17.5",
     "loglevel": "^1.6.1",
     "loglevel-prefix-persist": "^1.0.3",
