--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-gis": "git+ssh://git@git.gorilla-technology.com:scrd01/react-gis.git#react-gis-upgrade",
     "react-infinite-scroll-component": "^5.0.4",
     "react-json-tree": "^0.11.0",
+    "react-json-view": "^1.21.3",
     "react-la": "git+ssh://git@git.gorilla-technology.com:scrd01/react-la.git#upgrade-react-v16",
     "react-multi-email": "^0.5.1",
     "react-redux": "^4.4.6",
