--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lodash": "^4.17.5",
     "loglevel": "^1.6.1",
     "loglevel-prefix-persist": "^1.0.3",
+    "material-ui-chip-input": "^1.1.0",
     "method-override": "^2.3.10",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.27",
