--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "license": "ISC",
   "dependencies": {
     "@date-io/moment": "^1.3.13",
-    "@f2e/gui": "git+ssh://git@git.gorilla-technology.com:gorilla/f2e/gui.git",
+    "@f2e/gui": "^1.1.3",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -70,7 +70,6 @@
     "purecss": "^1.0.0",
     "query-string": "^5.1.1",
     "react": "^16.13.0",
-    "react-chart": "git+ssh://git@git.gorilla-technology.com:scrd01/react-chart.git#upgrade-react-v16",
     "react-color": "^2.17.3",
     "react-dom": "^16.13.0",
     "react-flow-renderer": "^9.6.1",
