--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "jquery": "^3.3.1",
     "jschardet": "^2.1.1",
     "jsdoc": "^3.6.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "localforage": "^1.9.0",
     "lodash": "^4.17.5",
     "loglevel": "^1.6.1",
@@ -71,6 +73,7 @@
     "query-string": "^5.1.1",
     "react": "^16.13.0",
     "react-color": "^2.17.3",
+    "react-csv": "^2.2.2",
     "react-dom": "^16.13.0",
     "react-flow-renderer": "^9.6.1",
     "react-gis": "git+ssh://git@git.gorilla-technology.com:scrd01/react-gis.git#react-gis-upgrade",
