--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
+    "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.9.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
@@ -51,6 +52,7 @@
     "formidable": "^1.2.1",
     "graceful-fs": "^4.2.6",
     "html-to-image": "^1.3.20",
+    "html-webpack-plugin": "^4.5.2",
     "jest": "^23.6.0",
     "jquery": "^3.3.1",
     "jschardet": "^2.1.1",
@@ -63,6 +65,7 @@
     "loglevel-prefix-persist": "^1.0.3",
     "material-ui-chip-input": "^1.1.0",
     "method-override": "^2.3.10",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.27",
     "morgan": "^1.9.0",
