--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "graceful-fs": "^4.2.6",
     "html-to-image": "^1.3.20",
     "html-webpack-plugin": "^4.5.2",
+    "i18next": "^22.4.10",
     "jest": "^23.6.0",
     "jquery": "^3.3.1",
     "jschardet": "^2.1.1",
@@ -82,6 +83,7 @@
     "react-dom": "^16.13.0",
     "react-flow-renderer": "^9.6.1",
     "react-gis": "git+ssh://git@git.gorilla-technology.com:scrd01/react-gis.git#react-gis-upgrade",
+    "react-i18next": "^12.1.5",
     "react-infinite-scroll-component": "^5.0.4",
     "react-json-tree": "^0.11.0",
     "react-json-view": "^1.21.3",
@@ -110,6 +112,8 @@
     "xlsx": "^0.15.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.2",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
