--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   "license": "ISC",
   "dependencies": {
     "@date-io/moment": "^1.3.13",
-    "@f2e/gui": "^1.1.3",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -50,7 +49,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "font-gorilla": "^1.2.2",
+    "font-gorilla": "git+ssh://git@git.gorilla-technology.com:gorilla/font-gorilla.git#v1.2.2",
     "formidable": "^1.2.1",
     "graceful-fs": "^4.2.6",
     "html-to-image": "^1.3.20",
