Remove gorilla modules.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "chewbacca-ui-examples",
+  "name": "scp-frontend",
   "version": "1.0.0",
-  "description": "Chewbacca UI",
+  "description": "SCP frontend",
   "main": "server.js",
   "engines": {
     "node": ">=6.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "http://ivs.duckdns.org:10080/web-ui/chewbacca-app-ui"
   },
   "scripts": {
     "clean": "grunt clean",
@@ -35,6 +31,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
+    "@turf/turf": "^5.1.6",
     "axios": "^0.20.0",
     "babel-jest": "^23.6.0",
     "babel-polyfill": "^6.26.0",
@@ -44,22 +41,36 @@
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.9.1",
     "cypress": "^12.3.0",
+    "d3-contour": "^1.3.2",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
     "errorhandler": "^1.5.0",
+    "esri-leaflet": "^2.3.2",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "font-gorilla": "git+ssh://git@git.gorilla-technology.com:gorilla/font-gorilla.git#v1.2.2",
+    "flatpickr": "^4.6.13",
     "formidable": "^1.2.1",
+    "geolib": "^3.2.0",
     "graceful-fs": "^4.2.6",
+    "heatmap.js": "^2.0.5",
+    "highcharts": "~11.1.0",
+    "highcharts-custom-events": "^3.0.10",
     "html-to-image": "^1.3.20",
     "html-webpack-plugin": "^4.5.2",
+    "i18next": "^21.10.0",
+    "i18next-http-backend": "^1.2.4",
     "jest": "^23.6.0",
     "jquery": "^3.3.1",
     "jschardet": "^2.1.1",
     "jsdoc": "^3.6.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
+    "leaflet": "1.3.1",
+    "leaflet-draw": "^1.0.2",
+    "leaflet-semicircle": "^2.0.2",
+    "leaflet.markercluster": "^1.3.0",
+    "leaflet.motion": "^0.1.4",
+    "leaflet-polylinedecorator": "^1.6.0",
     "localforage": "^1.9.0",
     "lodash": "^4.17.5",
     "loglevel": "^1.6.1",
@@ -70,22 +81,24 @@
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.27",
     "morgan": "^1.9.0",
-    "mui-datatables": "^3.5.0",
+    "mui-datatables": "^3.8.5",
     "object-path-immutable": "^1.0.1",
     "prop-types": "^15.6.1",
     "purecss": "^1.0.0",
     "query-string": "^5.1.1",
     "react": "^16.13.0",
+    "react-addons-create-fragment": "^15.6.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-color": "^2.17.3",
     "react-csv": "^2.2.2",
     "react-dom": "^16.13.0",
     "react-flow-renderer": "^9.6.1",
-    "react-gis": "git+ssh://git@git.gorilla-technology.com:scrd01/react-gis.git#react-gis-upgrade",
+    "react-grid-layout": "^0.16.6",
     "react-infinite-scroll-component": "^5.0.4",
     "react-json-tree": "^0.11.0",
     "react-json-view": "^1.21.3",
-    "react-la": "git+ssh://git@git.gorilla-technology.com:scrd01/react-la.git#upgrade-react-v16",
     "react-multi-email": "^0.5.1",
+    "react-notification-system": "^0.2.17",
     "react-redux": "^4.4.6",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.1.0",
@@ -94,8 +107,6 @@
     "react-sortable-tree-theme-full-node-drag": "^1.1.0",
     "react-sortable-tree-theme-minimal": "0.0.14",
     "react-test-renderer": "^16.8.3",
-    "react-timebar": "git+ssh://git@git.gorilla-technology.com:scrd01/react-timebar.git#upgrade-react-v16",
-    "react-ui": "git+ssh://git@git.gorilla-technology.com:scrd01/react-ui.git#upgrade-react-v16",
     "redux": "^3.6.0",
     "regenerator-runtime": "^0.13.1",
     "serve-favicon": "^2.5.0",
@@ -103,10 +114,11 @@
     "stomp-websocket": "^2.3.4-next",
     "stompjs": "^2.3.3",
     "styled-components": "^5.2.0",
+    "stylis": "^3.5.4",
     "underscore.string": "^3.2.1",
-    "vbda-ui": "git+ssh://git@git.gorilla-technology.com:scrd01/vbda-ui.git#upgrade-react-v16",
-    "widget-builder": "git+ssh://git@git.gorilla-technology.com:scrd01/widget-builder.git#react-v16-merge",
-    "xlsx": "^0.15.4"
+    "vis": "^4.21.0",
+    "xlsx": "^0.15.4",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
